# GMCR

./: README.md  base_classes.py  main.py
src/: clipper.py  consensus_functions.py  consensus_sets.py  fg_reg.py  fgr.py  fitting_graph.py  icp.py  invariants.py  ransac.py  teaser.py
src/FGR/: CMakeLists.txt  README.md  app.cpp  fgr_baseline.cpp  fgr_test.cpp  fgr_utils.cpp
src/FGR/include/: app.h  fgr_utils.h
src/GORE/: compile.m  demo.m  gore4.mexa64  gore4.mexmaci64  gore4.mexw64  gore6.mexa64  gore6.mexmaci64  gore6.mexw64  readme.txt
src/GORE/common/: evalcsm.m  matchkps.m  pcresolution.m  pcsetcolor.m  randaxis.m  randrot.m  ransac3dof_timeout.m  ransac4dof_timeout.m  ransac6dof.m  ransac6dof_timeout.m  rot_svd.m  rotdist.m
src/GORE/data/: data_mian_1.mat  data_mian_2.mat  data_mian_4.mat  data_mining_1.mat  data_mining_2.mat  data_stanford_1.mat  data_stanford_2.mat  data_vaihingen_1.mat
src/GORE/include/: data_indexation.h  geometry.h  gore.h  reg_binary_tree.h  reg_common.h  registration.h  rot3_matches_evaluator.h  rot3_matches_evaluator.hpp  rot3_matches_evaluator_l2.h  rot3_matches_evaluator_l2.hpp  search.h  search.hpp  state.h  state_priority_hashtable.h  state_priority_hashtable.hpp  state_priority_hashtable_df.hpp  state_priority_queue.h  state_priority_queue.hpp  util_sort.h
src/GORE/src/: geometry.cpp  gore4.cpp  gore6.cpp  (+4 more)
utility/: benchmark_viz.py  error_functions.py  functions.py  graph.py  math.py  outlier_vis.py  point_cloud_animate.py  pointcloud.py  preprocessing.py  registration.py  timer.py
utility/temp/: T.pkl  view_point.json
